# sfml-slalom

./: CMakeLists.txt
assets/: flag-blue.aseprite  flag-red.aseprite  skier.aseprite  trees.aseprite
src/: .clang-format  main.cpp
src/components/application/: application.cpp  application.hpp
src/components/behaviours/: activatable.hpp  physical.cpp  physical.hpp  updatable.cpp  updatable.hpp
src/components/helpers/: aabb_collision_tester.cpp  aabb_collision_tester.hpp  animator.cpp  animator.hpp  assets.hpp  randomizer.cpp  randomizer.hpp  range.hpp  spritesheet.cpp  spritesheet.hpp
src/components/nodes/: node.cpp  node.hpp  sprite_node.cpp  sprite_node.hpp
src/components/scene/: scene.cpp  scene.hpp
src/components/scenes/: scene.cpp  scene.hpp
src/components/states/: state.cpp  state.hpp  state_machine.cpp  state_machine.hpp
src/game/helpers/: settings.cpp  settings.hpp
src/game/nodes/: skier_node.cpp  skier_node.hpp  track_node.cpp  track_node.hpp
src/game/scenes/: game_scene.cpp  game_scene.hpp
